sample/retrieveUnpackaged/objects/Book_Copy__c.object
<CustomObject>
    <fields>
        <fullName>Availble__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Availble</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Book_Copy_Name__c</fullName>
        <formula>Book__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Book Copy Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Book__c</fullName>
        <label>Book</label>
        <referenceTo>Book__c</referenceTo>
        <relationshipLabel>Book Copies</relationshipLabel>
        <relationshipName>Book_Copies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Issued_On__c</fullName>
        <label>Issued On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Return_By__c</fullName>
        <label>Return By</label>
        <type>Date</type>
    </fields>
    <label>Book Copy</label>
    <nameField>
        <displayFormat>BKCPY-{0000}</displayFormat>
        <label>Book Copy Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Book Copies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>